salesforce-marketing-cloud/4.1/modules/ROOT/pages/salesforce-mktg-connector-upgrade-migrate.adoc
= Upgrading and Migrating Salesforce Marketing Cloud Connector to 4.x
:page-aliases: connectors::salesforce/salesforce-mktg-connector-upgrade-migrate.adoc

Upgrade Anypoint Connector for Salesforce Marketing Cloud (Salesforce Marketing Cloud Connector) to version 4.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|3.x |4.x
|===

== Changes in This Release

* The connector now supports multiple child organizations by specifying the *Account Id* field.
* The `SFDC-MARKETING-CLOUD:THROTTLED` error is removed.

== Upgrade Prerequisites

Before you perform the upgrade, you must:

. Create a backup of your files, data, and configuration in case you must restore to the previous version.
. Install Salesforce Marketing Cloud Connector 4.x.x.

== Upgrade Steps

Follow these steps to perform the upgrade from Salesforce Marketing Cloud Connector 3.x.x to Salesforce Marketing Cloud Connector 4.x.x:

. In Anypoint Studio, create a Mule project.
. In the *Mule Palette* view, click *Search in Exchange*.
. In the *Add Dependencies to Project* window, enter `Salesforce Marketing Cloud` in the search field.
. In the *Available modules* section, select *Salesforce Marketing Cloud Connector* and click *Add*.
. Click *Finish*.
. Verify that the `mule-sfdc-marketing-cloud-connector` dependency version is `4.x.x` in the `pom.xml` file, in which the first `x` is the minor release number and the second `x` is the patch release number.

Studio upgrades the connector automatically.

== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Check the project `pom.xml` file and verify that there are no problems.
. Test the connection and verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters or caching the metadata, try restarting Studio.

== Revert the Upgrade

If it is necessary to revert to the previous version of Salesforce Marketing Cloud Connector, change the `mule-sfdc-marketing-cloud-connector` dependency version `4.x.x` in the project's `pom.xml` file to the previous version.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
