salesforce-marketing-cloud/5.0/modules/ROOT/pages/salesforce-mktg-connector-upgrade-migrate.adoc
= Upgrading and Migrating Salesforce Marketing Cloud Connector to 5.x
:page-aliases: connectors::salesforce/salesforce-mktg-connector-upgrade-migrate.adoc

Upgrade Anypoint Connector for Salesforce Marketing Cloud (Salesforce Marketing Cloud Connector) to version 5.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|4.x |5.x
|===

== Changes in This Release

* This connector is now compatible with Java 17 only.
* These libraries are upgraded to address reported security vulnerabilities:

** The `springframework` library is upgraded to version 6.2.18.
** The `jackson-databind` and `jackson-dataformat-xml` libraries are upgraded to version 2.21.3.
** The `cxf-core` library  is upgraded to 4.2.0.
** The `woodstox-core` library is upgraded to version 7.2.0.
** The `stax2-api` library is upgraded to version 4.3.0.
** The `cryptacular` library is upgraded to version 1.3.0.
** The `dom4j` library is upgraded to version 2.2.0.
** The `commons-io` library is upgraded to version 2.22.0.
** The `commons.lang3` library is upgraded to version 3.20.0.
** The `commons-codec` library is upgraded to version 1.22.0.
** The `commons-beanutils` library is upgraded to version 1.11.0.
** The `commons-text` library is upgraded to version 1.14.0.
** The `kotlin-stdlib` library is upgraded to version 2.1.21.
** The `xmlsec` library is upgraded to version 4.0.4.
** The `guava` library is upgraded to version 33.6.0-jre.
** The `jakarta.xml.bind-api` library is upgraded to version 4.0.2.
** The `jaxb-runtime` library is upgraded to version 4.0.5.
** The `jakarta.xml.ws-api` library is upgraded to version 4.0.2.
** The `jakarta.jws-api` library is upgraded to version 3.0.0.
** The `jakarta.xml.soap-api` library is upgraded to version 3.0.2.
** The `jakarta.activation-api` library is upgraded to version 2.1.3.
** The `jackson-module-jaxb-annotations` library is replaced by the `jackson-module-jakarta-xmlbind-annotations` library.
* The FuelSDK dependency is removed. Core connector operations are now migrated to localized, compile-time generated classes to eliminate external classpath and transitive library conflicts in your Mule applications.

== Upgrade Prerequisites

Before you perform the upgrade, you must:

. Create a backup of your files, data, and configuration in case you must restore to the previous version.
. Install Salesforce Marketing Cloud Connector 5.x.x.

== Upgrade Steps

Follow these steps to perform the upgrade from Salesforce Marketing Cloud Connector 4.x.x to Salesforce Marketing Cloud Connector 5.x.x:

. In Anypoint Studio, create a Mule project.
. In the *Mule Palette* view, click *Search in Exchange*.
. In the *Add Dependencies to Project* window, enter `Salesforce Marketing Cloud` in the search field.
. In the *Available modules* section, select *Salesforce Marketing Cloud Connector* and click *Add*.
. Click *Finish*.
. Verify that the `mule-sfdc-marketing-cloud-connector` dependency version is `5.x.x` in the `pom.xml` file, in which the first `x` is the minor release number and the second `x` is the patch release number.

Studio upgrades the connector automatically.

== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Check the project `pom.xml` file and verify that there are no problems.
. Test the connection and verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters or caching the metadata, try restarting Studio.

== Revert the Upgrade

If it is necessary to revert to the previous version of Salesforce Marketing Cloud Connector, change the `mule-sfdc-marketing-cloud-connector` dependency version `5.x.x` in the project's `pom.xml` file to the previous version.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.salesforce.com[Salesforce Help]
 
